# sharpazelle

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum
.github/workflows/: tests.yml
commonerrors/: BUILD.bazel  error.go
config/: configurer.go
language/: language.go
parser/: BUILD.bazel  csproj_parser.go  csproj_parser_test.go  folder_parser.go  folder_parser_test.go  models.go
parser/test_data/simple/lib/: lib.csproj
parser/test_data/simple/webapp/: webapp.csproj
pointer/: BUILD.bazel  to.go
resolver/: BUILD.bazel  configurer.go  language.go  language_test.go  resolver.go  utils.go  utils_test.go
tests/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/simple/: bazel-bin  bazel-out  bazel-simple  bazel-testlogs  simple.sln
tests/simple/Tests/: BUILD.bazel
tests/simple/lib/: BUILD.bazel
tests/simple/webapp/: BUILD.bazel  webapp.csproj  webapp.generated.sln
tests/simple/webapp/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs
tests/simple/webapp/Properties/: launchSettings.json
utils/: BUILD.bazel  utils.go  utils_test.go
