load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = [
        "csproj_parser.go",
        "folder_parser.go",
        "models.go",
    ],
    importpath = "github.com/cdumange/sharpazelle/parser",
    visibility = ["//visibility:public"],
)

go_test(
    name = "parser_test",
    srcs = [
        "csproj_parser_test.go",
        "folder_parser_test.go",
    ],
    embed = [":parser"],
    deps = [
        "//utils",
        "@com_github_stretchr_testify//assert",
    ],
)
