load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "resolver",
    srcs = [
        "configurer.go",
        "language.go",
        "resolver.go",
        "utils.go",
    ],
    importpath = "github.com/cdumange/sharpazelle/resolver",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)

go_test(
    name = "resolver_test",
    srcs = ["utils_test.go"],
    embed = [":resolver"],
    deps = ["@com_github_stretchr_testify//assert"],
)
