load("@bazel_gazelle//:def.bzl", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "resolver",
    srcs = [
        "configurer.go",
        "language.go",
        "resolver.go",
    ],
    importpath = "github.com/cdumange/sharpazelle/resolver",
    visibility = ["//visibility:public"],
    deps = [
        "//parser",
        "//utils",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)

gazelle_binary(
    name = "gazelle_csharp",
    languages = ["resolver"],
    visibility = ["//visibility:public"],
)
