load("@rules_dotnet//dotnet:defs.bzl", "csharp_binary")

csharp_binary(
    name = "webapp",
    srcs = glob(
        [
            "*.cs",
            "Pages/*.cs",
            "Pages/**/*.cs",
            "Properties/*.cs",
            "Properties/**/*.cs",
        ],
        exclude = [
            "bin/**",
            "obj/**",
        ],
    ),
    additionalfiles = glob([
        "wwwroot/**",
        "Pages/**/*.cshtml",
        "Pages/*.cshtml",
    ], exclude = ["**/*.txt", "**/*.md"]),
    resources = glob([
        "wwwroot/**",
        "Pages/**/*.cshtml",
        "Pages/*.cshtml",
    ], exclude = ["**/*.txt", "**/*.md"]),
    project_sdk = "web",
    target_frameworks = ["net8.0"],
)
